# ChessRL

./: .dockerignore  .gitignore  Dockerfile.gui  Dockerfile.train  LICENSE  README.md  ToDo.md  _config.yml  build_and_run.sh  docker-compose.yml  main.py  play_gui.py  pyproject.toml  train.py
ChessRL/: config.py  encoding.py  main.py  mcts.py  network.py  pyproject.toml  replay_buffer.py  self_play.py  trainer.py
ChessRLVenv/: pyvenv.cfg
src/: MCTS_chess.py  alpha_net.py  analyze_games.py  chess_board.py  chess_gui.py  cpu_pipeline.py  encoder_decoder.py  evaluator.py  init_model.py  pipeline.py  requirements.txt  run_alphazero.py  train.py  train_multiprocessing.py  visualize_board.py
