[project]
name = "chessrl"
version = "0.1.0"
description = "Chess Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "python-chess>=1.999",
    "torch>=2.6.0",
    "pygame>=2.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
chessrl-train = "train:main"
chessrl-play = "play_gui:main"

[tool.setuptools]
packages = ["ChessRL"]
